log/test/192.168.56.104 2017_11_13 23_09_39.txt
Huawei>
<Huawei>display interface G0/0/0
                          ^
Error: Wrong parameter found at '^' position.
<Huawei>display interface G0/0/1
GigabitEthernet0/0/1 current state : UP
Line protocol current state : UP
Description:
Switch Port, PVID :    1, TPID : 8100(Hex), The Maximum Frame Length is 9216
IP Sending Frames' Format is PKTFMT_ETHNT_2, Hardware address is 4c1f-cc5f-4bae
Last physical up time   : 2017-11-13 22:55:25 UTC-08:00
Last physical down time : 2017-11-13 22:55:14 UTC-08:00
Current system time: 2017-11-13 23:09:36-08:00
Hardware address is 4c1f-cc5f-4bae
    Last 300 seconds input rate 0 bytes/sec, 0 packets/sec
    Last 300 seconds output rate 0 bytes/sec, 0 packets/sec
    Input: 39561 bytes, 415 packets
    Output: 50095 bytes, 454 packets
    Input:
      Unicast: 304 packets, Multicast: 90 packets
      Broadcast: 21 packets
    Output:
      Unicast: 71 packets, Multicast: 383 packets
      Broadcast: 0 packets
    Input bandwidth utilization  :    0%
    Output bandwidth utilization :    0%

<Huawei>display interface G0/0/2
GigabitEthernet0/0/2 current state : DOWN
Line protocol current state : DOWN
Description:
Switch Port, PVID :    1, TPID : 8100(Hex), The Maximum Frame Length is 9216
IP Sending Frames' Format is PKTFMT_ETHNT_2, Hardware address is 4c1f-cc5f-4bae
Last physical up time   : -
Last physical down time : 2017-11-13 22:55:25 UTC-08:00
Current system time: 2017-11-13 23:09:37-08:00
Hardware address is 4c1f-cc5f-4bae
    Last 300 seconds input rate 0 bytes/sec, 0 packets/sec
    Last 300 seconds output rate 0 bytes/sec, 0 packets/sec
    Input: 0 bytes, 0 packets
    Output: 0 bytes, 0 packets
    Input:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Output:
      Unicast: 0 packets, Multicast: 0 packets
      Broadcast: 0 packets
    Input bandwidth utilization  :    0%
    Output bandwidth utilization :    0%

<Huawei>display interface %s5
                          ^
Error: Wrong parameter found at '^' position.
<Huawei>